<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".views.MainMenuFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_16" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_56"
                android:gravity="center"
                android:text="@string/main_menu"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="@color/textPrimary"
                android:textStyle="bold|italic" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_56" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_16">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/options_button"
                    style="@style/CustomOutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/options" />


                <com.google.android.material.button.MaterialButton
                    style="@style/CustomOutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="leaderboards" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_56" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play_button"
                style="@style/CustomPlayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/play_button_background"
                android:text="@string/play"
                android:textAppearance="@style/CustomPlayButton" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_switch_acc"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="switch account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>